src/test/fail/elif_without_if.lly
#[
SyntaxError: 'elif' without 'if'.
Where: File "test/fail/elif_without_if.lly" at line 6
]#

elif
